Fix cursor enable toggle and preview state

--- a/extensions/cursor-extension/blocks/cursor_embed.liquid
+++ b/extensions/cursor-extension/blocks/cursor_embed.liquid
@@ -2,7 +2,10 @@
 {% assign hover_value = app.metafields.fourcore_cursor.hover_cursor.value | default: "cartoon-bag-hover" %}
 {% assign size_value = app.metafields.fourcore_cursor.cursor_size.value | default: 32 | plus: 0 %}
 {% assign hover_size_value = app.metafields.fourcore_cursor.hover_cursor_size.value | default: size_value | plus: 0 %}
-{% assign enabled_value = app.metafields.fourcore_cursor.enabled.value | default: true %}
+{% assign enabled_value = app.metafields.fourcore_cursor.enabled.value %}
+{% if enabled_value == nil %}
+  {% assign enabled_value = true %}
+{% endif %}
 {% assign disable_mobile_value = true %}
 {% assign default_color = app.metafields.fourcore_cursor.default_color.value | default: "#ff7a59" %}
 {% assign default_accent = app.metafields.fourcore_cursor.default_accent_color.value | default: "#ffd166" %}
